# VST-Abyssal-Gaze

./: .gitignore  CMakeLists.txt  README.md  vibe coding prompt.txt
Source/: AbyssalLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
